--- a/React/yelloware-app/src/App.css
+++ b/React/yelloware-app/src/App.css
@@ -1,48 +1,72 @@
 .App {
   text-align: center;
+  width:100%;
+  height: 100px;
+  padding: 25 10%;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  margin-left: 100px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+topnav{
+  width:100%;
+  height: 80px;
+  padding: 0 10%;
+  background-color: black;
+   color: rgb(255, 0, 0);
+  font-size: calc(40px + 2vmin);
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  
+  width:100%;
+  height: 80px;
+  padding: 0 10%;
+  background-color: black;
+  
+  color: rgb(255, 0, 0);
+  font-size: calc(40px + 2vmin);
+  
+}
+nav{
+  width:  100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: right;
+  justify-content: space-between;
+  padding: 10px 10;
 }
+nav ul li{
+  display: inline-block;
+  list-style: none;
+  margin: 5px 40px;
 
+}
+nav ul li a{
+text-decoration: none;
+margin: 5px 40px;
+color:#ffffff
+
+}
 .App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  color: #ffffff;
+  width:  100%;
+  display: flex;
+  align-items: right;
+  justify-content: space-between;
+  padding: 20px 0;
 }
 
 .footer {
   position: absolute;
   bottom: 0;
   width:100%;
-  height: 50px;
-  background-color: black;
+  height:50px;
+  background-color: rgb(255, 255, 255);
   text-align: center;
   color: white;
+}
+.text-box{
+  font-size: 45px;
+  margin-bottom: 20px;
+  color: #ffffff;
 }
